--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ******************************************************************************
-* HW04: Inference in Bayes Nets
+* HW04: Enumerative Inference in Bayes Nets
 * CS131 Summer 2022
 * README
 * Author: Valerie Zhang vzhang02
